# rust_axum_jwt

./: .env  Cargo.toml  compose.yml  thunder-collection_rust_axum_jwt.json
database_script/: init.sql
src/: app_state.rs  lib.rs  main.rs  router.rs
src/database/: mod.rs  prelude.rs  users.rs
src/routes/: create_user.rs  guard.rs  hello_world.rs  login.rs  logout.rs  mod.rs
src/utils/: jwt.rs
