[package]
name = "rust_axum_jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["macros"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sea-orm = { version = "0.11.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = "1.0.160"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
